更新 .gitignore 並移除敏感憑證檔案，整合五常社區轄區地理資訊

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ storage_change_log.jsonl
 accountable_person_authorizations.json
 encrypted_storage_config.json
 
+# Google OAuth 憑證（敏感資訊，不得提交）
+google_credentials.json
+google_token.json
+
 # 個資相關檔案
 *.encrypted
 pii_*.json
